[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/pause.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PauseControl.gd" type="Script" id=2]
[ext_resource path="res://Bubble Bobble.otf" type="DynamicFontData" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.0745098, 0, 0, 1, 0.431373, 0.0431373, 0.0431373, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.388235, 0, 0, 1 )

[sub_resource type="DynamicFont" id=16]
size = 35
font_data = ExtResource( 3 )

[node name="PauseMenu" type="CanvasLayer"]

[node name="PauseControl" type="Control" parent="."]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="PauseControl"]
modulate = Color( 0, 0, 0, 0.694118 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseControl"]
margin_left = 299.0
margin_top = 69.0
margin_right = 662.0
margin_bottom = 553.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseControl/Panel"]
margin_left = 36.0
margin_right = 341.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "PAUSED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="PauseControl/Panel"]
margin_left = 67.0
margin_top = 69.0
margin_right = 311.0
margin_bottom = 164.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.105882, 0.952941, 0.054902, 1 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="PauseControl/Panel"]
margin_left = 67.0
margin_top = 199.583
margin_right = 311.0
margin_bottom = 294.583
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.0588235, 0.945098, 0.113725, 1 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Button" parent="PauseControl/Panel"]
margin_left = 67.0
margin_top = 341.892
margin_right = 304.0
margin_bottom = 432.892
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.0313726, 0.894118, 0.0431373, 1 )
text = "RETURN TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_button" type="TouchScreenButton" parent="."]
position = Vector2( 865.211, 0 )
scale = Vector2( 0.94112, 0.976562 )
normal = ExtResource( 1 )
pressed = ExtResource( 1 )
passby_press = true
[connection signal="pressed" from="PauseControl/Panel/resume" to="PauseControl" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseControl/Panel/restart" to="PauseControl" method="_on_restart_pressed"]
[connection signal="pressed" from="PauseControl/Panel/menu" to="PauseControl" method="_on_menu_pressed"]
[connection signal="pressed" from="pause_button" to="PauseControl" method="_on_pause_button_pressed"]
